p3/confs/manifests/service.yml
apiVersion: v2
kind: Service
metadata:
  name: wil-playground-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: wil-playground
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30007
