p3/confs/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will-playground-ingress
  namespace: dev
spec:
  rules:
  - host: wil42
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-playground-service
            port:
              number: 8888
